--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports: 
       - 2717:27017
     volumes:
-      - mongo_db:/data/db
+      - /mongo_db:/data/db
 
   # Node Api service
   api:
