--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "otp-generator": "^4.0.0",
     "qrcode": "^1.5.1",
     "socket.io": "^4.6.1",
+    "treblle": "^1.3.0",
     "validator": "^13.7.0"
   }
 }
