feat: Added rate limit & helmet fix: Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       SMPT_PORT: "${SMPT_PORT}"
       SMPT_MAIL: "${SMPT_MAIL}"
       SMPT_PASSWORD: "${SMPT_PASSWORD}"
+      DOCKER: "true"
       CLOUDINARY_NAME: "${CLOUDINARY_NAME}"
       CLOUDINARY_APIKEY: "${CLOUDINARY_APIKEY}"
       CLOUDINARY_SECRET: "${CLOUDINARY_SECRET}"
