--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "dev": "nodemon server.js",
-    "start:docker": "DOCKER=true docker-compose up"
+    "start:docker": "DOCKER=true docker-compose up -d"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.9.0",
     "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^6.8.3",
