--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Adeleke Joshua",
   "license": "ISC",
   "dependencies": {
+    "@treblle/express": "^0.0.7",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
